# kuri_mbzirc_challenge_3

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: challenge_3.rviz
launch/: task.launch
scripts/: uav_1.py  uav_2.py  uav_3.py
